syntax = "proto3";

option java_multiple_files = true;
package no.entur.logging.cloud.grpc.mdc.test;
import "greeting_message.proto";

// gRPC service definitions for sync messages
service GreetingService {

	rpc greeting1 (no.entur.logging.cloud.grpc.mdc.test.GreetingRequest) returns (no.entur.logging.cloud.grpc.mdc.test.GreetingResponse);
	
	rpc exceptionLogging (no.entur.logging.cloud.grpc.mdc.test.GreetingRequest) returns (no.entur.logging.cloud.grpc.mdc.test.GreetingResponse);

	rpc greeting3 (no.entur.logging.cloud.grpc.mdc.test.GreetingRequest) returns (stream no.entur.logging.cloud.grpc.mdc.test.GreetingResponse);
	
	rpc greeting4 (no.entur.logging.cloud.grpc.mdc.test.GreetingRequest) returns (no.entur.logging.cloud.grpc.mdc.test.GreetingResponse);

	// for test of filtering
	rpc noLogging (no.entur.logging.cloud.grpc.mdc.test.GreetingRequest) returns (no.entur.logging.cloud.grpc.mdc.test.GreetingResponse);

	rpc fullLogging (no.entur.logging.cloud.grpc.mdc.test.GreetingRequest) returns (no.entur.logging.cloud.grpc.mdc.test.GreetingResponse);

	rpc summaryLogging (no.entur.logging.cloud.grpc.mdc.test.GreetingRequest) returns (no.entur.logging.cloud.grpc.mdc.test.GreetingResponse);

	rpc downstreamGreeting (no.entur.logging.cloud.grpc.mdc.test.GreetingRequest) returns (no.entur.logging.cloud.grpc.mdc.test.GreetingResponse);

	rpc greetingWithResponseObserverOnErrorCall (no.entur.logging.cloud.grpc.mdc.test.GreetingRequest) returns (no.entur.logging.cloud.grpc.mdc.test.GreetingResponse);

	rpc greeting5 (no.entur.logging.cloud.grpc.mdc.test.GreetingRequest) returns (no.entur.logging.cloud.grpc.mdc.test.GreetingResponse);

}

service DownstreamGreetingService {

	rpc greeting1 (no.entur.logging.cloud.grpc.mdc.test.GreetingRequest) returns (no.entur.logging.cloud.grpc.mdc.test.GreetingResponse);

}
